<resources>
    <string name="app_name">SisMEI</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_act_login">Login</string>
    <string name="lblLogin">Login</string>
    <string name="lblSenha">Senha</string>
    <string name="lblOK">OK</string>
    <string name="lblVoltar">VOltar</string>
    <string name="title_activity_act_edita_usuario">Alterar Dados do Usuario</string>
    <string name="lblRepitaSenha">Repita a Senha</string>
    <string name="lblSalvar">Salvar</string>
    <string name="title_activity_act_cliente_fornecedor">Cadastrar Cliente/Fornecedor</string>
    <string name="lblNomeCliFor" />
    <string name="lblInscCliFor" />
    <string name="lblCnpjCpf" />
    <string name="lblExcluir" >Excluir</string>
    <string name="Endereços" >Endereços</string>
    <string name="lblTelefones">Telefones</string>
    <string name="lblEmail">Email</string>
    <string name="lblCodCliFor" />
    <string name="lblAlterarUsuario">Alterar Usuario</string>
    <string name="lblCliente">Cliente</string>
    <string name="lblFornecedor">Fornecedor</string>
    <string name="title_activity_act_lista_cli_for">Lista Cliente/Fornecedor</string>
    <string name="lblAddCliFor" />
    <string name="title_activity_act_lista_endereco">Endereços</string>
    <string name="lblCadEndereco">Cadastrar Endereco</string>
    <string name="title_activity_act_cad_endereco">Cadastrar Endereço</string>

    <string name="lblCadTelefone">Cadastrar Telefone</string>
    <string name="title_activity_act_cad_telefone">Cadastrar Telefone</string>
    <string name="lblCodEnd">Cod. Endereço</string>
    <string name="lblEndereco">Endereço</string>
    <string name="lblCep">CEP</string>
    <string name="lblCidade">Cidade </string>
    <string name="lblEstado">Estado </string>
    <string name="title_activity_act_lista_materiais">Materiais</string>
    <string name="lblCadMaterial">Cadastrar Material</string>
    <string name="title_activity_act_cad_material">Cadastrar Material</string>
    <string name="lblMaterial">Materiais</string>
    <string name="lblCodMaterial">Cód. Material</string>
    <string name="lblNome">Nome</string>
    <string name="lblCor">Cor</string>
    <string name="lblunidMedida">Unid. Medida</string>
    <string name="lblPreco">Preço</string>
    <string name="lblQuantidade">Quantidade</string>
    <string name="title_activity_act_lista_orcamento">Orçamentos</string>
    <string name="lblCadOrcameno">Cadastrar Orçamento</string>
    <string name="title_activity_act_cad_orcamento">Novo Orçamento</string>
    <string name="lblCodOrcamento">Cod. Orçamento</string>
    <string name="lblBuscarCliente">Buscar Cliente</string>
    <string name="lblPesquisar">Pesquisar</string>
    <string name="title_activity_act_cad__orcamento">Cadastro de Orçamento</string>
    <string name="lblAddMat">Adic. Material</string>
    <string name="lblValorToal">Valor Total:</string>
    <string name="lblOrcamento">Orçamento</string>
    <string name="lblData">Data</string>
    <string name="title_activity_act_adic_material">Adicionar Materiais</string>
    <string name="lblAdicionar">Adic.</string>
    <string name="lblCodOrc">Cod. Orç.</string>
    <string name="title_activity_act_lista_produto">Lista de Produtos</string>
    <string name="lblCadastrarProduto">Cadastrar Produto</string>
    <string name="title_activity_act_cad_produto">Cadastro de Produtos</string>
    <string name="lblCodProd">Cod. Prod.</string>
    <string name="title_activity_act_adic_material_prod">Adicionar Material</string>
    <string name="lblCustoTotal">Custo Total:</string>
    <string name="lblProduto">Produto</string>
    <string name="title_activity_act_lista_pedido">Lista Pedidos</string>
    <string name="lblCadPedido">Cadastrar Pedido</string>
    <string name="title_activity_act_cad_pedido">Cadastro de Pedido</string>
    <string name="lblCodPed">Cod. Ped.</string>
    <string name="lblDataEntrega">Data Entrega</string>
    <string name="lblEmissao">Emissão</string>
    <string name="lblAdicProd">Adic. Prod</string>
    <string name="lblNumNota">Num. NF</string>
    <string name="title_activity_act_adic_prod">Adicionar Produto</string>
    <string name="lblPedido">Pedido</string>
    <string name="title_activity_act_lista_etapa_producao">Lista Etapas de Produção</string>
    <string name="title_activity_act_cad_etapa_producao">Cadastrar Etapa de Produção</string>
    <string name="lblCodEtapa">Cód. Etapa</string>
    <string name="lblNomeEtapa">Descrição</string>
    <string name="lblCadEtapaProd" >Cad. Etapa de Produção</string>
    <string name="lblEtapaProd">Etapa de Produção</string>
    <string name="lblEtapa">Etapa</string>
    <string name="lblStatus">Status</string>
    <string name="title_activity_act_lista_financeiro">Lista Financeiro</string>
    <string name="lblAddFinanceiro" />
    <string name="title_activity_act_cad_financeiro">Cadastro Financeiro</string>
    <string name="lblNumParc">Num.Parc.</string>
    <string name="lblTotParc">Total de Parcelas</string>
    <string name="lblCod">Cód.</string>
    <string name="lblDescricao">Descrição</string>
    <string name="lblValorFinan">Valor</string>
    <string name="lblDataVenc">Data Venc.</string>
    <string name="lblContasPagar">Contas a Pagar</string>
    <string name="lblContasReceber">Contas a Receber</string>
    <string name="title_activity_act_tab_cad_pedido">"Pedido"</string>
    <string name="title_activity_act_rel_financeiro">Relatório Financeiro</string>
    <string name="lblDataIni">Data Inicial</string>
    <string name="lblDatFin">Data Final</string>
    <string name="lblTipo">Tipo</string>
    <string name="lblRelatorio">Relatório</string>
    <string name="title_activity_act_base">actBase</string>
    <string name="lblcadTelefone">Cadastrar Telefone</string>
    <string name="lblcodTel">Cod. Telefone</string>
    <string name="lblTelefone">Telefone</string>
    <string name="lblTipoTel">Tipo de Telefone</string>
    <string name="lblCadastraEmail">Cadastrar Email</string>
    <string name="lblCodEmail">Cod. Email</string>
    <string name="title_activity_act_empresa">Dados da Empresa</string>
    <string name="lblnomeEmpresa">Nome da Empresa</string>
    <string name="lblCnpj">CNPJ</string>
    <string name="title_activity_act_bando_dados">Banco de Dados</string>
    <string name="lblImportar">Importar</string>
    <string name="lblExportar">Exportar</string>
</resources>
