<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.lincolnueda.sismei.Cadastros.actClienteFornecedor"
    android:orientation="vertical"
    android:id="@+id/LayMain">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView6" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblCodCliFor"
                android:id="@+id/lblCodCliFor" />

            <EditText
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edtCodCliFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblNomeCliFor"
                android:id="@+id/lblNomCliFor" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtNomeCliFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblInscCliFor"
                android:id="@+id/lblRgInsc" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtRgInsc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblCnpjCpf"
                android:id="@+id/lblCnpjCpf" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtCnpjCpf" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:id="@+id/LayCad">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblSalvar"
                    android:id="@+id/btnSalvarCliFor"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#ff2a912a"
                    android:textColor="#fff" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblExcluir"
                    android:id="@+id/btnExcluirCliFor"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#ff2a912a"
                    android:textColor="#fff" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LayEndTel"
                android:layout_marginTop="40dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Endereços"
                    android:id="@+id/btnEndereco"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:background="#ff2a912a"
                    android:textColor="#fff" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblTelefones"
                    android:id="@+id/btnTelefone"
                    android:layout_marginRight="20dp"
                    android:background="#ff2a912a"
                    android:textColor="#fff" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblEmail"
                    android:id="@+id/btnEmail"
                    android:background="#ff2a912a"
                    android:textColor="#fff" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
